gitops-apps/ghost/base/ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ghost
  labels:
    app: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:latest
        ports:
        - containerPort: 2368

        volumeMounts:
        - name: ghost-content
          mountPath: /var/lib/ghost/content

      volumes:
      - name: ghost-content
        persistentVolumeClaim:
          claimName: ghost-content
