gitops-apps/ghost/base/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghost
spec:
  ports:
  - port: 80
    targetPort: 2368
  selector:
    app: ghost
