gitops-apps/ghost/base/ghost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-server-ingress
  namespace: ghost
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: ghost-no-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: zmartin.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghost
                port:
                  number: 80
